platform/exports/drone/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"drone-server"},"name":"drone-server","namespace":"drone"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"drone-server"}},"template":{"metadata":{"labels":{"app":"drone-server"}},"spec":{"containers":[{"env":[{"name":"DRONE_SERVER_HOST","valueFrom":{"secretKeyRef":{"key":"DRONE_SERVER_HOST","name":"drone-server-secret"}}},{"name":"DRONE_SERVER_PROTO","value":"https"},{"name":"DRONE_RPC_SECRET [...]
    creationTimestamp: "2025-10-24T15:43:54Z"
    generation: 2
    labels:
      app: drone-server
    name: drone-server
    namespace: drone
    resourceVersion: "22604306"
    uid: 4b22df93-f955-4055-9c8e-bcab955b0d61
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: drone-server
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2025-10-24T15:49:20Z"
        creationTimestamp: null
        labels:
          app: drone-server
      spec:
        containers:
        - env:
          - name: DRONE_SERVER_HOST
            valueFrom:
              secretKeyRef:
                key: DRONE_SERVER_HOST
                name: drone-server-secret
          - name: DRONE_SERVER_PROTO
            value: https
          - name: DRONE_RPC_SECRET
            valueFrom:
              secretKeyRef:
                key: DRONE_RPC_SECRET
                name: drone-server-secret
          - name: DRONE_DATABASE_DRIVER
            value: postgres
          - name: DRONE_DATABASE_DATASOURCE
            valueFrom:
              secretKeyRef:
                key: DRONE_DATABASE_DATASOURCE
                name: drone-server-secret
          - name: DRONE_USER_CREATE
            valueFrom:
              secretKeyRef:
                key: DRONE_USER_CREATE
                name: drone-server-secret
          - name: DRONE_GITHUB_CLIENT_ID
            valueFrom:
              secretKeyRef:
                key: DRONE_GITHUB_CLIENT_ID
                name: drone-server-secret
          - name: DRONE_GITHUB_CLIENT_SECRET
            valueFrom:
              secretKeyRef:
                key: DRONE_GITHUB_CLIENT_SECRET
                name: drone-server-secret
          image: drone/drone:2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          name: drone-server
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        nodeSelector:
          kubernetes.io/hostname: s231226.wholesaleinternet.net
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-10-24T16:52:50Z"
      lastUpdateTime: "2025-10-24T16:52:50Z"
      message: ReplicaSet "drone-server-7cd8d6dd98" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-02-08T14:15:06Z"
      lastUpdateTime: "2026-02-08T14:15:06Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
