platform/exports/drone/middlewares.yaml
apiVersion: v1
items:
- apiVersion: traefik.io/v1alpha1
  kind: Middleware
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"traefik.io/v1alpha1","kind":"Middleware","metadata":{"annotations":{},"name":"https-redirect","namespace":"drone"},"spec":{"redirectScheme":{"permanent":true,"scheme":"https"}}}
    creationTimestamp: "2025-10-24T14:27:06Z"
    generation: 1
    name: https-redirect
    namespace: drone
    resourceVersion: "73097"
    uid: ea82d9ed-133a-4e6b-87f1-e244791cf4be
  spec:
    redirectScheme:
      permanent: true
      scheme: https
kind: List
metadata:
  resourceVersion: ""
